# netdeployonnx

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AUTHORS  Makefile  README.md  cifar10.npy  cifar10_kernels.txt  config.yaml  device.proto  izer_pyproject.toml  kernel_data_per_layer.txt  kernel_map.yaml  kernel_mapping.ods  my_cifar10_cnn.c  netdeployonnx.yaml  pyproject.toml  results.intermed.yaml  results.yaml  results.yaml.sample  results_network.yaml  results_npu.yaml  test_debug_asyncio.py
netdeployonnx/: __init__.py  __main__.py  cli.py  config.py
netdeployonnx/client/: __init__.py  experiment.ipynb  experiment.py  experiment_helper.py  experiment_networks.ipynb  experiment_npu.ipynb  grpc_backend.py
netdeployonnx/common/: device_pb2.py  device_pb2_grpc.py  device_pb2_grpc.py.bak  hannah_backend.py  netclient_remote.py  wrapper.py
netdeployonnx/devices/: __init__.py
netdeployonnx/devices/max78000/: __init__.py  cnn_constants.py  cnn_registers.py  core.py  device.py  graph_synthesizer.py  graph_transformer.py
netdeployonnx/devices/max78000/ai8xize/: __init__.py  apb_writer.py  config.py  device_ai8x.py  wrap_ai8ize.py
netdeployonnx/devices/max78000/device_transport/: cifar10.py  cli.py  commands.py  serialhandler.py  virtualdevices.py
netdeployonnx/devices/max78000/device_transport/protobuffers/: main_pb2.py
netdeployonnx/devices/max78000/optimizer/: __init__.py  augmenters.py  eliminators.py  fusers.py  graph.py  optimizer.py
netdeployonnx/devices/max78000/synthesizer/: grid.py  memory.py  scheduler.py
netdeployonnx/devices/max78000/synthesizer/backend/: __init__.py
netdeployonnx/devices/max78000/synthesizer/backend/synth_core/: __init__.py  layer_by_node.py
netdeployonnx/server/: __init__.py
scripts/: aioserialtest.py  analyze_cnn.py  embedded_cli.py  graph_transformer.py  helper_max78000_cnn.py  torch_pth_to_onnx.py
test/: __init__.py  test_cnn_registers.py  test_config.py  test_create_class_from_layerdoc.py  test_create_flash_npy.py  test_devicetransport_serial.py  test_gen_onnx.py  test_grpc_hannah.py  test_handle_onnx.py  test_max78000.py  test_max78000_ai8xize.py  test_max78000_backend.py  test_max78000_cli.py  test_max78000_graph_synthesis.py  test_max78000_graph_transformer.py  test_max78000_graph_transformer2.py  test_max78000_layer_by_node.py  test_max78000_memory.py  test_max78000_synthesize_cifar10.py  test_netcode.py  test_netsynth.py  test_serialhandler.py  test_serialhandler_pos.py  test_synth_grid.py  weights_convert.py
test/data/: ai85-bayer2rgb-qat8-q.pth.onnx  ai85-cifar10-qat8-q.pth.onnx  ai85-cifar10-qat8-q.pth.tar  ai85-cifar100-qat8-q.pth.onnx  ai85-faceid_112-qat-q.pth.onnx  ai85-kws20_v3-qat8-q.pth.onnx  ai8x_net_0.onnx  ai8x_net_0_fixed.onnx  ai8x_net_1.onnx  ai8x_net_1_fixed.onnx  ai8x_net_2.onnx  ai8x_net_2_fixed.onnx  ai8x_net_3.onnx  ai8x_net_3_fixed.onnx  ai8x_net_4.onnx  ai8x_net_4_fixed.onnx  ai8x_net_5.onnx  ai8x_net_5_fixed.onnx  ai8x_net_6.onnx  ai8x_net_6_fixed.onnx  ai8x_net_7.onnx  ai8x_net_7_fixed.onnx  ai8x_net_8.onnx  ai8x_net_8_fixed.onnx  ai8x_net_9.onnx  ai8x_net_9_fixed.onnx  cifar10.onnx  cifar10_bias.py  cifar10_layout.py  cifar10_short.onnx  cifar10_transformed.onnx  cifar10_weights.py  edit_ai8x_net.py  simple_model.onnx  transformed_ai8x_net_0.onnx  transformed_ai8x_net_1.onnx  transformed_ai8x_net_2.onnx  transformed_ai8x_net_3.onnx  transformed_ai8x_net_4.onnx  transformed_ai8x_net_5.onnx  (+4 more)
